--- a/src/components/gameListing/GameListing.scss
+++ b/src/components/gameListing/GameListing.scss
@@ -1,6 +1,8 @@
 @use '../../common/Colors.scss'as *;
 @use '../../common/Sizes.scss'as *;
 
+$buttons-height: 3rem;
+
 .gameListing {
     display: flex;
     flex-direction: column;
@@ -12,7 +14,7 @@
         justify-content: center;
         flex-wrap: wrap;
         gap: 1rem;
-        margin: 1rem 0;
+        margin: 1rem 0 1rem + $buttons-height + $base-padding*2 0;
     }
 
     .buttons {
@@ -22,6 +24,8 @@
         padding: $base-padding;
         align-items: center;
         justify-content: center;
+        height: $buttons-height;
+        box-shadow: 0 -1px 3px 1px rgba($color: #000000, $alpha: 0.5);
 
         background-color: map-get($primary-color , main );
 
